add new product partial

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -2,7 +2,7 @@
 
 {% block elements %}
 
-	<!-- <a class="sales-button white create-btn">CREAR</a> -->
+	<a class="sales-button white create-btn">CREAR</a>
 
 	<div class="grid-container">
 		<div class="grid-100">
