--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -11,17 +11,14 @@
             <div class="featured">AM</div>
           <% } %>
         <% } %>
+
+
         <a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
           <div class="product-card-image" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
-          <div class="product-card-data">
-            <p><%= name %></p>
-            <p><%= User.firstname %></p>
-          </div>
-          <div class="product-card-stats">
-            <p><%= finalPrice %></p>
-            <p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="bi_ecommerce-diamon"></i></p>
-          </div>
+          <div class="product-card-price">$ 90.45</div>
+          <div class="product-card-zoom" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
         </a>
+
       </div>
   </div>
 </script>
