--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5641,3 +5641,16 @@ white = #fff
 			width 48px
 			min-width 48px
 			margin 5px
+			
+.am-profile-box
+	.edit-options
+		font-family: 'Montserrat',sans-serif;
+		font-weight: bold;
+		letter-spacing: 1.5px;
+		color: #3a3d3f;
+		margin-top: 15px;
+		font-size: 11px;
+		text-align: center;
+		i
+			font-size: 1.5em;
+			cursor: pointer;
