--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -2,123 +2,164 @@
 {% set pageTitle = 'Administrar cuenta' %}
 
 {% block elements %}
-	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
-		<div class="grid-container u-margin-top-20">
-			<div class="grid-100">
-				<p class="account-title"><i class="fa fa-caret-down"></i>Quiero abrir mi tienda</p>
+	<div id="seller-invitation">
+		<div class="am-profile" style="padding-left: 0; padding-right: 0;">
+
+			<div class="grid-container u-margin-top-20">
+				<div class="grid-100">
+					<p class="account-title"><i class="fa fa-caret-down"></i>Abre tu tienda en línea</p>
+				</div>
 			</div>
-		</div>
 
-		<div class="grid-container">
-			<div class="grid-100">
+			<div class="grid-container">
+				<div class="grid-100">
+					{% if !context %}
+						{% include '../../partials/account-menu.html' %}
+					{% endif %}
 
-				{% include '../../partials/account-menu.html' %}
+					<div class="am-profile-box grid-container u-margin-top-20" style="float: right; max-width: 880px !important; width: 100%;">
+						<form class="complete-form">
 
-				<div class="am-profile-box grid-container u-margin-top-20">
-					<form class="complete-form">
+							<div class="invitation-cover" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458957539/general/vende_en_internet.png');">
 
-						<div class="separator main">
-							<span class="line"></span><span class="text">VALIDACIÓN<br>DE VENDEDOR</span><span class="line"></span>
-						</div>
-
-						<div class="grid-50 mobile-grid-100">
-							<p class="title">País</p>
-							<select class="input select" name='country'>
-								<option disabled selected>Seleccionar País</option>
-								<option>Argentina</option>
-								<option>Bolivia</option>
-								<option>Brasil</option>
-								<option>Chile</option>
-								<option>Colombia</option>
-								<option>Ecuador</option>
-								<option>España</option>
-								<option>Estados Unidos</option>
-								<option>Mexico</option>
-								<option>Paraguay</option>
-								<option>Peru</option>
-								<option>Uruguay</option>
-								<option>Venezuela</option>
-							</select>
-						</div>
-						<div class="grid-50 mobile-grid-100">
-							<p class="title">Ciudad</p>
-							<input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/>
-						</div>
-
-						<div class="grid-50 mobile-grid-100">
-							<p class="title">Estado o provincia</p>
-							<input class="input" name='province' value="{{user.province}}" type="text" placeholder="Seleccionar Estado"/>
-						</div>
-						<div class="grid-50 mobile-grid-100">
-							<p class="title">Código postal</p>
-							<input class="input" name='zipcode' value="{{user.zipcode}}" type="text" placeholder="Ingresa código postal"/>
-						</div>
-
-						<div class="grid-100">
-							<p class="title">Dirección de Envío</p>
-							<input class="input" type="text" value="{{user.direction}}" name='direction' placeholder="Dirección Línea 1"/>
-							<p class="title">Teléfono móvil</p>
-							<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa el número de whatsapp"/>
-							<p class="title">Usuario Paypal</p>
-							<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/>
-						</div>
-
-						{% if user.country  === 'Peru' %}
-						<div class="artist-data {% if !user.isArtist %} hide {%endif%}">
-							<div class="separator u-margin-top-40">
-								<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
 							</div>
 
-							<div class="grid-100 mobile-grid-100">
-								<p class="title">¿Que tipo de documento tienes?</p>
+							<p class="invitation-title">Crea tu tienda en línea en 3 pasos</p>
+
+							<p class="invitation-subTitle">Ahora hacemos muy fácil el que puedas vender tu arte por internet</p>
+
+							<a class="invitation-button" href="">CREAR TIENDA</a>
+
+							<p class="invitation-subTitle underline">¿Cómo funciona la tienda?</p>
+
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="seller-validation">
+		<div class="am-profile" style="padding-left: 0; padding-right: 0;">
+
+			<div class="grid-container u-margin-top-20">
+				<div class="grid-100">
+					<p class="account-title"><i class="fa fa-caret-down"></i>Quiero abrir mi tienda</p>
+				</div>
+			</div>
+
+			<div class="grid-container">
+				<div class="grid-100">
+
+					{% include '../../partials/account-menu.html' %}
+
+					<div class="am-profile-box grid-container u-margin-top-20">
+						<form class="complete-form">
+
+							<div class="separator main">
+								<span class="line"></span><span class="text">VALIDACIÓN<br>DE VENDEDOR</span><span class="line"></span>
 							</div>
 
 							<div class="grid-50 mobile-grid-100">
-								<select class="input select" name='document'>
-									<option disabled selected>Seleccionar tipo</option>
-									<option>DNI</option>
-									<option>RUC</option>
+								<p class="title">País</p>
+								<select class="input select" name='country'>
+									<option disabled selected>Seleccionar País</option>
+									<option>Argentina</option>
+									<option>Bolivia</option>
+									<option>Brasil</option>
+									<option>Chile</option>
+									<option>Colombia</option>
+									<option>Ecuador</option>
+									<option>España</option>
+									<option>Estados Unidos</option>
+									<option>Mexico</option>
+									<option>Paraguay</option>
+									<option>Peru</option>
+									<option>Uruguay</option>
+									<option>Venezuela</option>
 								</select>
 							</div>
-
-							<div class="grid-100 mobile-grid-100">
-								<p class="title">Nro de Documento</p>
-								<input class="input" type="text" value="{{user.documentValue}}" name='documentValue' placeholder="Ingresa un documento válido"/>
-								<p class="title">Nombre completo/razón social</p>
-								<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
+							<div class="grid-50 mobile-grid-100">
+								<p class="title">Ciudad</p>
+								<input class="input" name='city' value="" type="text" placeholder="Ingresa tu ciudad de residencia"/>
 							</div>
-						</div>
-						{%endif%}
-						{% if !user.isSeller %}
-						<p class="title">Acuerdos con el usuario</p>
 
-						<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
-
-						<table class="u-margin-top-20">
-							<tr>
-								<td><input type="checkbox" name="terms" value=""></td>
-								<td class="check-title">Acepto los <a href="#">términos y condiciones para vendedores</a> en la plataforma.</td>
-							</tr>
-						</table>
-						{%endif%}
-						<div class="grid-100 mobile-grid-100">
-							<button class="button upload green u-margin-top-40" data-color="green">GUARDAR CAMBIOS</button>
-						</div>
-						{% if user.isSeller %}
-							<div class="grid-100 mobile-grid-100">
-								<a class="button upload red u-margin-top-40 delete-store" data-color="green">DESACTIVAR TIENDA</a>
+							<div class="grid-50 mobile-grid-100">
+								<p class="title">Estado o provincia</p>
+								<input class="input" name='province' value="{{user.province}}" type="text" placeholder="Seleccionar Estado"/>
 							</div>
-						{%endif%}
+							<div class="grid-50 mobile-grid-100">
+								<p class="title">Código postal</p>
+								<input class="input" name='zipcode' value="{{user.zipcode}}" type="text" placeholder="Ingresa código postal"/>
+							</div>
 
-						<div class="grid-100 save-loading hide mobile-grid-100">
-							<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
-						</div>
-					</form>
+							<div class="grid-100">
+								<p class="title">Dirección de Envío</p>
+								<input class="input" type="text" value="{{user.direction}}" name='direction' placeholder="Dirección Línea 1"/>
+								<p class="title">Teléfono móvil</p>
+								<input class="input" type="text" value="{{user.phone}}" name='phone' placeholder="Ingresa el número de whatsapp"/>
+								<p class="title">Usuario Paypal</p>
+								<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/>
+							</div>
+
+							{% if user.country  === 'Peru' %}
+							<div class="artist-data {% if !user.isArtist %} hide {%endif%}">
+								<div class="separator u-margin-top-40">
+									<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
+								</div>
+
+								<div class="grid-100 mobile-grid-100">
+									<p class="title">¿Que tipo de documento tienes?</p>
+								</div>
+
+								<div class="grid-50 mobile-grid-100">
+									<select class="input select" name='document'>
+										<option disabled selected>Seleccionar tipo</option>
+										<option>DNI</option>
+										<option>RUC</option>
+									</select>
+								</div>
+
+								<div class="grid-100 mobile-grid-100">
+									<p class="title">Nro de Documento</p>
+									<input class="input" type="text" value="{{user.documentValue}}" name='documentValue' placeholder="Ingresa un documento válido"/>
+									<p class="title">Nombre completo/razón social</p>
+									<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
+								</div>
+							</div>
+							{%endif%}
+							{% if !user.isSeller %}
+							<p class="title">Acuerdos con el usuario</p>
+
+							<p class="subtitle">Cuando se vende una obra o producto en la plataforma, la venta ocurre entre tú y el comprador final. Arte Manifiesto funciona como tu agente. Para hacer esto, tienes que darnos permisos explícitos</p>
+
+							<table class="u-margin-top-20">
+								<tr>
+									<td><input type="checkbox" name="terms" value=""></td>
+									<td class="check-title">Acepto los <a href="#">términos y condiciones para vendedores</a> en la plataforma.</td>
+								</tr>
+							</table>
+							{%endif%}
+							<div class="grid-100 mobile-grid-100">
+								<button class="button upload green u-margin-top-40" data-color="green">GUARDAR CAMBIOS</button>
+							</div>
+							{% if user.isSeller %}
+								<div class="grid-100 mobile-grid-100">
+									<a class="button upload red u-margin-top-40 delete-store" data-color="green">DESACTIVAR TIENDA</a>
+								</div>
+							{%endif%}
+
+							<div class="grid-100 save-loading hide mobile-grid-100">
+								<button class="button u-margin-top-40" data-color="green"><i class="load fa fa-spinner"></i></button>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
-		</div>
 
+		</div>
 	</div>
 
 	<a id="go-share-modal" href="#share-modal">HOLI!</a>
