change 'obras destacadas' por 'artistas destacados'

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -39,7 +39,7 @@
 									<!-- <div class="am-Switch-button" data-state="active">
 										<i class="fa fa-bars"></i>
 									</div> -->
-									<span>Obras destacadas</span>
+									<span>Artistas destacados</span>
 								</div>
 							</div>
 							<div class="am-Filter-item">
