remove max-width for canvas container

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5161,7 +5161,7 @@ white = #fff
 	$ SALES
 *------------------------------------*/
 .sales-image-card
-	max-width 220px
+	// max-width 220px
 	margin auto
 	background white
 	position relative
