responsive peview in creator

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -12,7 +12,7 @@
 
 	<div class="grid-container">
 		<div class="grid-100">
-			<div class="sales-image-card">
+			<div class="sales-image-card" style="display: table;">
 				<img src="{{work.photo|addFilter('w_300,c_limit')}}"/>
 				<div class="content">
 					<a href="#" class="title">{{work.name}}</a><br>
