--- a/app/views/user/account/configuration.html
+++ b/app/views/user/account/configuration.html
@@ -22,7 +22,7 @@
 						<div class="grid-100">
 							<p class="title">Desactivar cuenta</p>
 
-							<button class="button upload red u-margin-top-40" data-color="green">DESACTIVAR</button>
+							<button class="button upload delete red u-margin-top-40" data-color="green">DESACTIVAR</button>
 
 							<div class="edit-options work-delete-confirm hide" style="display: block;">
   					DESACTIVAR CUENTA? &nbsp;
