--- a/app/views/user/account/seller.html
+++ b/app/views/user/account/seller.html
@@ -2,8 +2,7 @@
 {% set pageTitle = 'Administrar cuenta' %}
 
 {% block elements %}
-
-	<div id="seller-invitation">
+	<div id="seller-invitation" class="{%if user.isSeller%} hide {%endif%}">
 		<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
 			<div class="grid-container u-margin-top-20">
@@ -19,29 +18,23 @@
 					{% endif %}
 
 					<div class="am-profile-box grid-container u-margin-top-20" style="float: right; max-width: 880px !important; width: 100%;">
-						<form class="complete-form">
-
 							<div class="invitation-cover" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458957539/general/vende_en_internet.png');">
-
 							</div>
 
 							<p class="invitation-title">Crea tu tienda en línea en 3 pasos</p>
 
 							<p class="invitation-subTitle">Ahora hacemos muy fácil el que puedas vender tu arte por internet</p>
 
-							<a class="invitation-button" href="">CREAR TIENDA</a>
+							<a class="invitation-button create-store-btn" href="">CREAR TIENDA</a>
 
 							<p class="invitation-subTitle underline">¿Cómo funciona la tienda?</p>
-
-						</form>
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
 
-	<div id="seller-validation">
+	<div id="seller-validation" class="{%if !user.isSeller%} hide {%endif%}">
 		<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
 			<div class="grid-container u-margin-top-20">
@@ -104,8 +97,8 @@
 								<input class="input" type="text" value="{{user.paypal}}" name='paypal' placeholder="Ingresa el email de tu cuenta en paypal"/>
 							</div>
 
-							{% if user.country  === 'Peru' %}
-							<div class="artist-data {% if !user.isArtist %} hide {%endif%}">
+
+							<div class="artist-data country-container {% if user.country !== 'Peru' %} hide {%endif%}">
 								<div class="separator u-margin-top-40">
 									<span class="line"></span><span class="text">VENDEDORES EN PERÚ </span><span class="line"></span>
 								</div>
@@ -129,7 +122,6 @@
 									<input class="input" type="text" value="{{user.businessName}}" name='businessName' placeholder="Ingresa un documento válido"/>
 								</div>
 							</div>
-							{%endif%}
 							{% if !user.isSeller %}
 							<p class="title">Acuerdos con el usuario</p>
 
@@ -202,14 +194,12 @@
 
 		</div>
 	</div>
-
 {% endblock %}
 {% block scripts %}
 <script src='//maps.googleapis.com/maps/api/js?sensor=false&libraries=places'></script>
 <script>
 $(function() {
 	$('.seller').addClass('selected');
-
 	new APP.AccountSellerScreen();
 });
 </script>
