correction desvorder forms

--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -18,20 +18,20 @@
 
 				<div class="am-profile-box grid-container u-margin-top-20">
 					<form class="password-form">
-						<div class="grid-100" style="clear: inherit;">
+						<!-- <div class="grid-100" style="clear: inherit;"> -->
 							<p class="title" style="padding-top: 0;">Nueva contraseña</p>
 							<input class="input" type="password" name='password' required placeholder="Ingresa tu nueva contraseña"/>
 							<p class="title">Repite nuevamente</p>
 							<input class="input" type="password" name='rePassword' required placeholder="Ingresa nuevamente tu nueva contraseña"/>
-						</div>
+						<!-- </div> -->
 
-						<div class="grid-100 save mobile-grid-100">
-							<button class="button u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
-						</div>
+						<!-- <div class="grid-100 save mobile-grid-100"> -->
+							<button class="button save u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
+						<!-- </div> -->
 
-						<div class="grid-100 save-loading hide mobile-grid-100">
-							<button class="button u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
-						</div>
+						<!-- <div class="grid-100 save-loading hide mobile-grid-100"> -->
+							<button class="button save-loading hide u-margin-top-30" data-color="green"><i class="load fa fa-spinner"></i></button>
+						<!-- </div> -->
 					</form>
 				</div>
 			</div>
