--- a/app/views/user/account/configuration.html
+++ b/app/views/user/account/configuration.html
@@ -15,24 +15,20 @@
 				{% if !context %}
 					{% include '../../partials/account-menu.html' %}
 				{% endif %}
-
 				<div class="am-profile-box grid-container u-margin-top-20">
 					<form class="complete-form">
+						<p class="title">Desactivar cuenta</p>
 
-						<div class="grid-100">
-							<p class="title">Desactivar cuenta</p>
+						<button class="button upload delete red u-margin-top-40" data-color="green" style="position: relative;">DESACTIVAR</button>
 
-							<button class="button upload delete red u-margin-top-40" data-color="green">DESACTIVAR</button>
-
-							<div class="edit-options work-delete-confirm hide" style="display: block;">
-  					DESACTIVAR CUENTA? &nbsp;
-  					<i class="bi_interface-box-tick work-delete-force save-icon" style="display: inline;"></i>
-  					<i class="bi_interface-box-cross work-delete-cancel cancel-icon" style="display: inline;"></i>
-  				</div>
-						</div>
-
+						<div class="edit-options work-delete-confirm hide" style="display: block;">
+		  					DESACTIVAR CUENTA? &nbsp;
+		  					<i class="bi_interface-box-tick work-delete-force save-icon" style="display: inline;"></i>
+		  					<i class="bi_interface-box-cross work-delete-cancel cancel-icon" style="display: inline;"></i>
+		  				</div>
 					</form>
 				</div>
+
 			</div>
 		</div>
 
