--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -80,7 +80,7 @@
 	</div>
 
 	<!-- SALES 1 -->
-	<div class="grid-container grid-1 hide product-container">
+	<div class="grid-container grid-product-1 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
@@ -90,7 +90,7 @@
 					</div>
 					<div class="sales-image-card">
 						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
-						<canvas id="product1" width="500" height="400">
+						<canvas id="canvas-product1" width="620" height="280">
 						</canvas>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 		</div>
 	</div>
 
-	<div class="grid-container grid-2 hide product-container">
+	<div class="grid-container grid-product-2 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
@@ -142,7 +142,8 @@
 						<i class="selected fa fa-check-square-o"></i>
 					</div>
 					<div class="sales-image-card white-mark">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product2" width="500" height="400">
+						</canvas>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -252,7 +253,7 @@
 		</div>
 	</div>
 
-	<div class="grid-container grid-3 hide product-container">
+	<div class="grid-container grid-product-3 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -261,7 +262,7 @@
 						<i class="fa fa-check-square-o"></i>
 					</div>
 					<div class="sales-image-card">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product3" width="500" height="400">
 					</div>
 				</div>
 				<div class="sales-right">
@@ -352,7 +353,7 @@
 		</div>
 	</div>
 
-	<div class="grid-container grid-4 hide product-container">
+	<div class="grid-container grid-product-4 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
@@ -361,7 +362,7 @@
 						<i class="fa fa-check-square-o"></i>
 					</div>
 					<div class="sales-image-card white-mark">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product4" width="500" height="400">
 					</div>
 				</div>
 				<div class="sales-right">
@@ -405,7 +406,7 @@
 	</div>
 
 	<!-- SALES 5 -->
-	<div class="grid-container grid-5 hide product-container">
+	<div class="grid-container grid-product-5 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -414,7 +415,7 @@
 						<i class="fa fa-check-square-o"></i>
 					</div>
 					<div class="sales-image-card">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product5" width="500" height="400">
 					</div>
 				</div>
 				<div class="sales-right">
@@ -469,7 +470,7 @@
 	</div>
 
 	<!-- SALES 6 -->
-	<div class="grid-container grid-6 hide product-container">
+	<div class="grid-container grid-product-6 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
@@ -479,7 +480,7 @@
 					</div>
 					<div class="sales-image-card">
 						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product6" width="500" height="400">
 					</div>
 				</div>
 				<div class="sales-right">
