--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -44,7 +44,10 @@
 			<div class="products-creator">
 				<div class="product-creator" data-prod='1'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
@@ -55,7 +58,10 @@
 				</div>
 				<div class="product-creator" data-prod='2'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
@@ -66,7 +72,10 @@
 				</div>
 				<div class="product-creator" data-prod='3'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
@@ -318,7 +327,10 @@
 			<div class="products-creator">
 				<div class="product-creator" data-prod='4'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
@@ -329,7 +341,10 @@
 				</div>
 				<div class="product-creator" data-prod='5'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
@@ -340,7 +355,10 @@
 				</div>
 				<div class="product-creator" data-prod='6'>
 					<div class="image">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
+						<div class="background">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
+						</div>
+						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
 					</div>
 					<p class="title">OBRA ORIGINAL</p>
 					<p class="description">0/1 activados</p>
