add product creator sections

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5187,6 +5187,7 @@ white = #fff
 		color #838c8c
 		font-style italic
 	.original-work
+		z-index: 1;
 		display: flex;
 		align-items: center;
 		font-size 10px
