product navigation details

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -94,8 +94,8 @@
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
 					<div class="controls">
-						<i class="selected fa fa-check-square-o"></i>
-						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o part-btn-1"></i>
+						<i class="fa fa-check-square-o part-btn-2"></i>
 					</div>
 					<div class="sales-image-card">
 						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
@@ -103,7 +103,7 @@
 						</canvas>
 					</div>
 				</div>
-				<div class="sales-right">
+				<div class="sales-right sales-right-1">
 					<p class="title u-margin-top-10" style="text-align: center;">DETALLES ENVÍO</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
 
@@ -138,7 +138,7 @@
 
 					<a class="sales-button u-margin-top-30 u-margin-bottom-30">ACTUALIZAR</a>
 				</div>
-				<div class="sales-right" style="display: none;">
+				<div class="sales-right sales-right-2" style="display: none;">
 
 					<p class="title u-margin-top-10" style="text-align: center;">OBRA ORIGINAL: CONDICIONES DE VENTA</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -207,16 +207,15 @@
 			<div class="sales">
 				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
 					<div class="controls">
-						<i class="fa fa-check-square-o"></i>
-						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o part-btn-1"></i>
+						<i class="selected fa fa-check-square-o part-btn-2"></i>
 					</div>
 					<div class="sales-image-card white-mark">
 						<canvas id="canvas-product2" width="500" height="400">
 						</canvas>
 					</div>
 				</div>
-				<div class="sales-right">
-
+				<div class="sales-right sales-right-1">
 					<p class="title u-margin-top-10" style="text-align: center;">PRINTS: CONDICIONES DE VENTA</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
 
@@ -318,7 +317,7 @@
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
-				<div class="sales-right" style="display: none;">
+				<div class="sales-right sales-right-2" style="display: none;">
 
 					<p class="title u-margin-top-10" style="text-align: center;">PRINTS: EDICIÓN</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -364,14 +363,14 @@
 			<div class="sales">
 				<div class="sales-left">
 					<div class="controls">
-						<i class="selected fa fa-check-square-o"></i>
-						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o part-btn-1"></i>
+						<i class="fa fa-check-square-o part-btn-2"></i>
 					</div>
 					<div class="sales-image-card">
 						<canvas id="canvas-product3" width="500" height="400">
 					</div>
 				</div>
-				<div class="sales-right">
+				<div class="sales-right sales-right-1">
 
 					<p class="title u-margin-top-10" style="text-align: center;">TAZAS: CONDICIONES DE VENTA</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -414,7 +413,7 @@
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
-				<div class="sales-right" style="display: none;">
+				<div class="sales-right sales-right-2" style="display: none;">
 
 					<p class="title u-margin-top-10" style="text-align: center;">TAZAS: EDICIÓN</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -497,20 +496,6 @@
 						<a class="sales-button blue" href="#">ACTIVAR</a>
 					</div>
 				</div>
-				<div class="product-creator" data-prod='6'>
-					<div class="image">
-						<div class="background">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1460699344/general/pruduct-creator-background.png">
-						</div>
-						<img class="image-preview" src="http://res.cloudinary.com/arte-manifiesto/image/upload//w_380/v1455381925/general/product-test.jpg">
-					</div>
-					<p class="title">COJINES</p>
-					<p class="description">0/1 activados</p>
-					<div class="buttons">
-						<a class="sales-button white edit-btn" href="#">EDITAR</a>
-						<a class="sales-button blue" href="#">ACTIVAR</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -521,14 +506,15 @@
 			<div class="sales">
 				<div class="sales-left">
 					<div class="controls">
-						<i class="selected fa fa-check-square-o"></i>
-						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o part-btn-1"></i>
+						<i class="fa fa-check-square-o part-btn-2"></i>
 					</div>
 					<div class="sales-image-card">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product4" width="620" height="280">
+						</canvas>
 					</div>
 				</div>
-				<div class="sales-right">
+				<div class="sales-right sales-right-1">
 
 					<p class="title u-margin-top-10" style="text-align: center;">PHONE CASES: EDICIÓN</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -576,7 +562,7 @@
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
-				<div class="sales-right" style="display: none;">
+				<div class="sales-right sales-right-2" style="display: none;">
 
 					<p class="title u-margin-top-10" style="text-align: center;">PHONE CASES: CONDICIONES</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
@@ -649,11 +635,12 @@
 			<div class="sales">
 				<div class="sales-left">
 					<div class="controls">
-						<i class="selected fa fa-check-square-o"></i>
-						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o part-btn-1"></i>
+						<i class="fa fa-check-square-o part-btn-2"></i>
 					</div>
 					<div class="sales-image-card">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+						<canvas id="canvas-product5" width="620" height="280">
+						</canvas>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -743,7 +730,7 @@
 	</div>
 
 	<!-- ALMOHADAS -->
-	<div class="grid-container grid-product-6 hide product-container">
+	<!-- <div class="grid-container grid-product-6 hide product-container">
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
@@ -839,7 +826,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div class="grid-container grid-product-4 hide product-container">
 		<div class="grid-100">
@@ -1399,9 +1386,7 @@
 					</table>
 
 					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
-
 					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
-
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
 			</div>
